# CambiaCosas

./: .gitignore  README.md  pyproject.toml
doc/: administracion_archivo_init.md  cambiacosas_init.md  edit_file.md  file_info.md  gemini_options.md  main.md
src/cambiacosas/: __main__.py
src/cambiacosas/googleapi/: api_client.py
tests/unit/administracion_archivo/: test_edit_file.py  test_file_info.py
