[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cambiacosas"
version = "0.1.0"  # You can adjust the version as needed
description = "A brief description of cambiacosas" # Please update this
authors = [
    { name = "Your Name", email = "your.email@example.com" } # Please update this
]
license = { text = "MIT" } # Assuming MIT License, update if different
requires-python = ">=3.8" # Adjust minimum Python version if needed
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cambiacosas = "cambiacosas.__main__:main"